# PiRC

./: .pre-commit-config.yaml  CNAME  Cargo.toml  Dockerfile  Dockerfile.ai-agent  Dockerfile.dashboard  Dockerfile.pi-gateway  Dockerfile.pirc-os  Dockerfile.rust-builder  LiquidityController.sol  PiRC100_Unified_System.html.  PiRCToken.sol  ReadMe.md  Readme.md  RewardController.sol  build-wasm.sh  docker-compose.yml  index.html  netlify.toml  prometheus.yml  pyproject.toml  setup.sh  wrangler.toml
.github/workflows/: release.yml
ai/llm-mixtral/: server.py
assets/js/: calculations.js  explorer-core.js
contracts/: PiRC101Vault.sol
examples/: ai_bot.rs  hello_pirc.py
helm/: Chart.yaml
k8s/: README.md  ingress.yaml  namespace.yml  pirc-deployment.yaml  redis-statefulset.yaml
mobile/: App.tsx  package.json
mobile/docs/: README.md
monitoring/grafana/: pi-trading-dashboard.json
pirc-ai-agent/: Cargo.toml
pirc-ai-agent/docs/: README.md
pirc-ai-agent/src/: agent.rs  lib.rs  llm.rs  memory.rs  pi-wallet.rs  tools.rs
pirc-core/: Cargo.toml
pirc-core/src/: lib.rs
pirc-dashboard/: Cargo.toml  Dockerfile  docker-compose.yml  package.json
pirc-dashboard/public/: index.html
pirc-dashboard/server/: server.js
pirc-dashboard/src/: App.jsx  api.rs  main.rs  metrics.rs  templates.rs  websocket.rs
pirc-dashboard/src/components/: MissionPlanner.jsx  Robot3D.jsx  Teleop.jsx  VideoStream.jsx
pirc-dashboard/src/hooks/: useROS.js
pirc-dashboard/src/migrations/: 001_create_metrics.sql
pirc-dashboard/templates/: dashboard.html
pirc-edge-ai/: Cargo.toml
pirc-edge-ai/src/: lib.rs
pirc-hal/: Dockerfile  docker-compose.yml  requirements.txt
pirc-hal/config/: motor_config.yaml
pirc-hal/hal/: can_bus.py  imu_xkf.py  motors.py  power.py
pirc-mlops/: Dockerfile  docker-compose.yml  requirements.txt  train.py
pirc-mlops/automl/: optuna_sweep.py  ray_tune.py
pirc-mlops/configs/: yolo10.yaml
pirc-mlops/dataset/: roboflow_manager.py
pirc-mlops/model_zoo/: download_models.py
pirc-navigation/: Dockerfile  docker-compose.yml  navigation_launch.py  requirements.txt
pirc-navigation/behavior_trees/: bt_navigator.py
pirc-navigation/config/: nav2_params.yaml
pirc-navigation/mpc/: casadi_mpc.py
pirc-navigation/planners/: sbpl_planer.py
pirc-navigation/sensors/: rplidar_a3.py
pirc-ops/: Cargo.toml
pirc-ops/src/: main.rs
pirc-os/: README.md  build.sh
pirc-os/installer/: pirc-os-install.sh
pirc-os/kernel/: config-6.8-rt-arm64
pirc-os/rootfs/boot/: config.txt
pirc-os/rootfs/etc/systemd/system/: pirc-vision.service
pirc-os/rootfs/opt/pirc/: docker-compose.yml
pirc-pi-super/: Cargo.toml
pirc-pi-super/src/: lib.rs
pirc-vision/: Dockerfile  README.md  config.yaml  depthai_pipeline.py  docker-compose.yml  main.py  requirements.txt
pirc-vision/detectors/: rt-detr.py  yolo10.py
pirc-vision/slam/: orb_slam3.py
ros2/pirc_hal/: pirc_hal_node.py
security/: rate_limiter.py
serverless/functions/: trade-pi.js
simulator/: index.html  stochastic_abm_simulator.py
src/: ai_agent.rs  main.rs
src/llm/: README.md  mod.rs
src/pi_gateway/: README.md  main.rs  trading.rs
src/pirc/: __init__.py  __main__.py  api.py  config.py  core.py  main.py  metrics.py  motors.py  security.py
src/pirc/api/: main.py  server.py
src/pirc/api/templates/: dashboard.html
src/pirc/core/: scheduler.py
src/pirc/irc/: client.py
src/pirc/tge/: fsm.py
src/pirc/vision/: pipeline.py
src/rust/tonic-proto/: pirc.proto
src/wasm/: README.md  ai-agent.js  ai-agent.worker.js
