[package]
name = "pirc-ai-agent"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.23"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
qdrant-client = "0.13"
redis = { version = "0.25", features = ["tokio-comp"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
lazy_static = "1.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
axum = "0.7"
