[package]
name = "pirc-ai-suite"
version = "2.0.1"
edition = "2021"
authors = ["KOSASIH <kosasihg88@gmail.com>"]
description = "🚀 PiRC AI Suite - Autonomous IRC + Pi Trading Bot"
license = "MIT"
repository = "https://github.com/KOSASIH/PiRC"
keywords = ["irc", "ai", "pi-network", "trading", "rust"]
categories = ["networking", "cryptography::cryptocurrencies"]

[dependencies]
# 🎯 Async Runtime
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.23"
futures = "0.3"
futures-util = "0.3"

# 📦 Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 🌐 HTTP + WebSocket
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# 🧠 AI + Vector DB
qdrant-client = "0.13"
candle-core = "0.3"        # ONNX/LLM inference
candle-nn = "0.3"
tokenizers = "0.19"

# 💰 Pi Network + Crypto
bitcoin = { version = "0.31", features = ["rand-std"] }
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
pi-network = "0.2"         # Pi SDK
hex = "0.4"

# 🗄️ Databases
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# 📊 Metrics + Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing-log"] }
prometheus = { version = "0.13", features = ["nightly"] }
metrics = "0.22"

# 🛠️ Utilities
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.7", features = ["v4", "serde", "fast"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"

# 🔒 Security
ring = "0.17"
zeroize = "1.8"

[dependencies.webpki-roots]
version = "0.26"
features = ["rustls"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[features]
default = ["ai"]
ai = ["candle-core", "candle-nn", "tokenizers"]
pi-network = ["pi-network", "bitcoin", "secp256k1"]
full = ["ai", "pi-network"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
