[tool.poetry]
name = "pirc"
version = "2.2.0"
description = "🚀 PiRC - Production Pi Robotics + IRC Framework (50Hz Core + YOLOv10 + Chat Control)"
authors = ["KOSASIH <kosasihg88@gmail.com>"]
maintainers = ["KOSASIH <kosasihg88@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KOSASIH/PiRC"
homepage = "https://pirc.kosasih.com"
documentation = "https://pirc.kosasih.com/docs"
keywords = [
    "robotics", "raspberry-pi", "irc", "ai", "computer-vision", 
    "fastapi", "asyncio", "realtime", "edge-ai", "yolo"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"

### 🌐 CORE NETWORKING
aiohttp = "^3.9.5"
redis = {extras = ["asyncio"], version = "^5.0.4"}
aiorwlock = "^1.5.2"
watchdog = "^4.0.1"
python-socketio = "^5.11.2"  # WebSocket upgrades

### 🚀 WEB/API STACK (Production)
uvicorn = {extras = ["standard"], version = "^0.30.1"}
fastapi = "^0.115.0"
python-multipart = "^0.0.9"
fastapi-socketio = "^0.1.3"

### 📊 ENTERPRISE OBSERVABILITY
pydantic = {extras = ["settings"], version = "^2.9.2"}
structlog = "^24.4.0"
prometheus-client = "^0.23.0"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.29.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-asyncio = "^0.48b0"
pybloom-live = "^4.1.0"

### ⚡ PERFORMANCE SUPERCHARGES
uvloop = "^0.20.0"                    # 10x faster asyncio
trio = "^0.25.0"                      # Structured concurrency
anyio = "^4.6.2"                      # Async compatibility

### 🤖 ROBOTICS CORE (Production Pi)
RPi.GPIO = "^0.7.1"
pigpio = "^1.78"
gpiozero = "^2.1.0"                   # Modern GPIO
smbus2 = "^0.4.4"                     # I2C sensors

### 👁️ VISION & AI (SOTA 2024)
ultralytics = "^8.3.0"                # YOLOv10 + Ultralytics
opencv-python-headless = "^4.10.0.84"
onnxruntime = "^1.21.0"               # Edge AI runtime
onnxruntime-tools = "^1.21.0"         # Optimization
Pillow = "^10.4.0"                    # Image processing

### 🧠 EDGE LLM (Optional)
llama-cpp-python = {version = "^0.3.9", optional = true}
sentence-transformers = {version = "^3.1.1", optional = true}

### 📡 COMMS & PROTOCOLS
pyzmq = "^26.3.0"                     # ZeroMQ
paho-mqtt = "^2.1.0"                  # MQTT
websockets = "^13.1"                  # Raw WS

[tool.poetry.extras]
ai = ["llama-cpp-python", "sentence-transformers"]
cuda = ["onnxruntime-gpu"]
full = ["ai", "cuda"]

[tool.poetry.group.dev.dependencies]
# Linting & Formatting
ruff = "^0.6.8"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
nox = "^2024.10.8"

# Testing (95% coverage goal)
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-timeouts = "^2.3.1"
hypothesis = "^6.112.1"              # Property testing
asynctest = "^0.13.0"

# Docs & Security
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.4"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
safety = "^2.4.2"
bandit = "^1.7.9"

# Pi Testing
pytest-rpi = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
dynamic = ["version"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.pi.dependencies]
# Pi-specific testing deps
RPi.GPIO = "^0.7.1"
pigpio = "^1.78"

### 🛠️ DEVELOPMENT TOOLS
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".git", "build", "dist"]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15

[tool.ruff.lint.flake8]
extend-ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["RPi.GPIO.*", "pigpio.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*", "*__init__.py"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=pirc --cov-report=html --cov-report=term-missing"
markers = [
    "pi: Raspberry Pi hardware tests",
    "slow: Slow integration tests",
    "vision: Computer vision tests"
]

[tool.pre-commit.hooks]
ruff = { args = ["--fix"] }
black = { }
mypy = { }
isort = { }
safety = { }
bandit = { }
